--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-Dependencies: yt-dlp, zbarimg
- - bin must be in $PATH
+`ffmpeg` and `zbarimg` must be in $PATH for all modules to function, latest version of `yt-dlp` will be automatically downloaded at startup into ./bin
